# worklab

./: .buildinfo  .gitignore  .gitlab-ci.yml  CITATION.cff  LICENSE  MANIFEST.in  README.html  README.md  README.rst  genindex.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: deploy_docs.yml  main.yml  tests.yml
_modules/: index.html
_modules/worklab/: ana.html  com.html  imu.html  kin.html  move.html  physio.html  plots.html  utils.html
_sources/: README.md
_sources/chapters/: developer.md  examples.md  general.md  overground.md  package.md  setup.md  treadmill.md
_sources/chapters/API/: ana.md  com.md  imu.md  kin.md  move.md  physio.md
_sources/chapters/examples/: ex_data_analysis_isometric_force_test.ipynb  ex_data_analysis_submaximal_test.ipynb  ex_data_analysis_wingate_test.ipynb  ex_kinetics_ergo.ipynb  ex_kinetics_mw.ipynb  ex_move_imu.ipynb
_static/: mystyles.css
chapters/: Exercise testing.html  developer.html  ergometer.html  examples.html  exercise_testing.html  general.html  overground.html  package.html  setup.html  theory.html  treadmill.html
chapters/API/: ana.html  com.html  imu.html  kin.html  move.html  physio.html  plots.html  utils.html
chapters/examples/: ex_data analysis Isometric force test.html  ex_data analysis Wingate test.html  ex_data analysis maximal exercise test.html  ex_data analysis sprint test.html  ex_data analysis submaximal test.html  ex_data_analysis_isometric_force_test.html  ex_data_analysis_maximal_exercise_test.html  ex_data_analysis_sprint_test.html  ex_data_analysis_submaximal_test.html  ex_data_analysis_wingate_test.html  ex_kinetics_ergo.html  ex_kinetics_mw.html  ex_move_imu.html  ex_physio_spiro.html
docs/: README.md  _config.yml  _toc.yml  requirements.txt
docs/chapters/: developer.md  ergometer.md  examples.md  exercise_testing.md  overground.md  setup.md  theory.md  treadmill.md
docs/chapters/API/: ana.md  com.md  imu.md  kin.md  move.md  physio.md  plots.md  utils.md
docs/chapters/examples/: ex_data analysis Wingate test.ipynb  ex_data analysis maximal exercise test.ipynb  ex_data analysis sprint test.ipynb  ex_data_analysis_isometric_force_test.ipynb  ex_data_analysis_maximal_exercise_test.ipynb  ex_data_analysis_sprint_test.ipynb  ex_kinetics_ergo.ipynb  ex_kinetics_mw.ipynb  ex_physio_spiro.ipynb
docs/chapters/examples/example_data/: COSMED_example.xlsx  Isometric force_example.xls  Max spiro_example.xlsx  Optotrak_example_.n3d  Sprint test_example.xls  Submax spiro_example.xlsx  Wingate test_example.xls
docs/source/: API.rst  conf.py  ergometer.rst  examples.rst  general.rst  index.rst  overground.rst  requirements.txt  theory.rst  treadmill.rst
docs/source/examples/: ex_move_imu.ipynb
docs/source/examples/example_data/: Esseda_example_HSB.csv  Fietsergometer_example.xls
example_data/: Drag_test_example.txt  Optipush_example.data
example_data/imu_example_data/NGIMU - 1 Frame - 00337909/: Settings.txt  battery.csv  humidity.csv  quaternion.csv  rssi.csv  sensors.csv  temperature.csv
example_data/imu_example_data/NGIMU - 3 Right - 003383F9/: battery.csv  linear.csv  quaternion.csv  rssi.csv  sensors.csv
example_data/imu_example_data/NGIMU - 5 Left - 00338C0E/: Settings.txt  battery.csv  sensors.csv  temperature.csv
examples/: ex_kinetics_ergo.ipynb  ex_kinetics_mw.ipynb  ex_move_imu.ipynb
tests/: test2_utils.py  test_utils.py
worklab/: __init__.py  ana.py  calcs.py  com.py  formats.py  imu.py  io.py  kin.py  move.py  physio.py  plots.py  utils.py
worklab/example_data/: COSMED_example.xls  Fietsergometer_example.xls  Smartwheel_example.txt
(+11 files in other folders)
