[project]
name = "worklab"
version = "2.0.dev"
description = "Basic scripts for worklab devices"
readme = "README.md"
requires-python = ">=3.7"
license = "GPL-3.0-or-later"
keywords = ["biomechanics", "ergometry", "physiology"]
authors = [
  {name = "Rick de Klerk", email = "r.de.klerk@pl.hanze.nl"},
  {name = "Thomas Rietveld", email = "t.rietveld@lboro.ac.uk"},
  {name = "Rowie Janssen", emaul = "r.j.f.janssen@umcg.nl"}
]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU GPLv3 License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = [
  "scipy>=1.2.0",
  "numpy",
  "pandas",
  "matplotlib",
  "xlrd"
]

[project.optional-dependencies]
dev = ["pytest", "flake8", "black"]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Reports" = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[flake8]
max-line-length = 120
extend-ignore = E203

[tool.black]
line-length = 120

